# LangChainV0.3_CrashCourse

./: JOURNAL.md  README.md
ep01_intro/1/: after.py  before.py
ep01_intro/2/: after.py  before.py
ep01_intro/3/: after.py  before.py
ep01_intro/4/: after.py  before.py
ep01_intro/5/: after.py  before.py
ep01_intro/6/: after.py  before.py
ep02_Poetry+LangChain+FastAPI/contract_simplifer/: pyproject.toml
ep03_Instant_triviabot/: pyproject.toml
ep03_Instant_triviabot/src/instant_trivia_bot/: chatbot.py  config.py  parallel_demo.py  structured_output.py
